Removed ml_ops.sh extract